# VRConduct

./: .gitignore  CMakeLists.txt  README.md
data/midi/: con1.mid  simple.mid  simple2.mid  simple3.mid  test2.mid
data/model/: baton3.mtl  cello_corrected.mtl  clarinet_corrected.mtl  double_bass_corrected.mtl  harp_corrected.mtl  red.mtl  space_scene.fbx  speaker_corrected.mtl  stand.mtl  test.mtl  trombone.mtl  trumpet_corrected.mtl  tuba_corrected.mtl
data/shader/: page.frag  page.vert  quad.frag  quad.vert  shadow.vert  simple.frag  simple.vert  skybox.frag  skybox.vert
data/texture/sky/: back.tga  bottom.tga  front.tga  left.tga  right.tga  top.tga
include/: audio.hpp  bpm.hpp  instrument.hpp  model.hpp  score.hpp
include/heatsink/: array_buffer.hpp  bind_state.hpp  component_traits.hpp  context.hpp  enum_traits.hpp  framebuffer.hpp  glfw.hpp  init.hpp  name_adaptor.hpp  name_traits.hpp  shader.hpp  texture.hpp  vertex_array.hpp  window.hpp
include/helper/: assimp.hpp  overlay.hpp  stb.hpp  vr_controller.hpp
src/: audio.cpp  instrument.cpp  main.cpp  model.cpp  score.cpp  tsf_implementation.cpp
src/heatsink/: context.cpp  framebuffer.cpp  glfw.cpp  name_adaptor.cpp  shader.cpp  vertex_array.cpp
src/helper/: assimp.cpp  stb.cpp  vr_controller.cpp
